2002-03-16  Eli Zaretskii  <eliz@is.elta.co.il>

	* Version 21.2 released.

2002-03-15  Stefan Monnier  <monnier@cs.yale.edu>

	* xterm.c (x_set_toolkit_scroll_bar_thumb, xm_scroll_callback)
	(XTread_socket): Undo last change: too late for this release.

2002-03-13  Stefan Monnier  <monnier@cs.yale.edu>

	* xterm.c (x_set_toolkit_scroll_bar_thumb) <USE_MOTIF>:
	Use a fixed-size thumb (based on an ad-hoc estimate of 30 chars per
	line) to avoid annoying flicker.
	(xm_scroll_callback): Get rid of the now unnecessary kludge.
	(XTread_socket): Mark it static.

2002-03-12  Juanma Barranquero  <lektu@terra.es>

	* editfns.c (syms_of_editfns): Fix typo.

2002-03-09  Jason Rumney  <jasonr@gnu.org>

	* fileio.c (Fcopy_file) [WINDOWS_NT]: Ensure file is not
	read-only when setting modified time.

2002-03-08  Juanma Barranquero  <lektu@terra.es>

	* w32fns.c (Fx_display_color_cells): Force 24+ bit color depths to
	24-bit.

2002-03-08  Gerd Moellmann  <gerd@gnu.org>

	* xdisp.c (move_it_vertically_backward): At the end of the
	function, when moving forward by lines, treat terminal frames
	specially.

2002-02-23  Eli Zaretskii  <eliz@is.elta.co.il>

	* coding.h (run_pre_post_conversion_on_str): Add prototype.

	* xselect.c (selection_data_to_lisp_data): Fix last change.

2002-02-22  Eli Zaretskii  <eliz@gnu.org>

	* puresize.h (BASE_PURESIZE): Increase to 710000.

2002-02-22  Eli Zaretskii  <eliz@is.elta.co.il>

	Support for ICCCM  Extended Segments in X selections:

	* xselect.c <Qcompound_text_with_extensions>: New variable.
	(syms_of_xselect): Intern and staticpro it.
	(selection_data_to_lisp_data): Run post-read-conversion on decoded
	selection text.
	(lisp_data_to_selection_data): If next-selection-coding-system is
	compound-text-with-extensions, set the type of selection to be
	compound-text.

	* xterm.h (x_encode_text): Update prototype.

	* xfns.c (x_encode_text): Accept additional arg SELECTIONP; all
	callers changed.  If SELECTIONP is non-zero, run the